--- a/website/newsletter/214/index.mdx
+++ b/website/newsletter/214/index.mdx
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+State of JS 4th!
+
+Chrismas break
 
 <!-- truncate -->
 
@@ -36,9 +38,44 @@ It covers topics like how to choose the right technologies, non-obvious behavior
 
 ## ⚛️ React {#react}
 
-<Todo />
+[**Base UI 1.0 alpha**](https://base-ui.com/)
+
+I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gather to create a new set of 25 unstyled, accessible, composable primitive components with great care to details, I think it’s worth paying attention\! Radix is super popular these days (notably thanks to shadcn/ui), but has been [less actively maintained](https://github.com/radix-ui/primitives/graphs/contributors) recently, and a new headless lib challenger is welcome\!
+
+---
+
+**React 19 and Custom Elements**
+
+- 📜 [React 19 and Web Component Examples](https://frontendmasters.com/blog/react-19-and-web-component-examples/): Chris Coyier testing React 19 custom elements support by creating a Lit element and rendering it though JSX. You can seamlessly pass an object as props, but for event handlers you may need to dispatch a custom event.
+- 📜 [React 19 introduces full support for custom elements](https://aleks-elkin.github.io/posts/2024-12-06-react-19/): Comparing support improvement between React 18 and React 19\.
+- 📜 [Sweet Suspense](https://plainvanillaweb.com/blog/articles/2024-09-09-sweet-suspense/): Fun experiment recreating React lazy/Suspense/ErrorBoundary with custom elements.
+
+---
 
 - 💸 [React Bricks – the Visual CMS for React got more accessible with lower entry price and flexible pay-as-you-go options. Start for free!](https://www.reactbricks.com/?utm_source=twir&utm_campaign=ql24)
+- 🐦 [Lee Robinson explains why transitioning between pages when running Next.js locally take time](https://x.com/leeerob/status/1869095675201192335)
+- 👀 [Next.js PR \- `unstable_rootParams()`](https://github.com/vercel/next.js/pull/72837): A new convenient experimental API to return path params from all path segments up to the root layout. Looks particularly useful for accessing a `[locale]` param.
+- 👀 [Next.js PR \- `experimental.newDevOverlay`](https://github.com/vercel/next.js/pull/73977): A new dev overlay is coming and the feature flag already exists.
+- 👀 [Rsbuild PR \- plugin-react-router](https://github.com/web-infra-dev/rsbuild/pull/4186): React Router framework features (Remix) are now implemented as a Vite plugin, but it seems other bundlers could also turn React Router into a framework 😲
+- 📜 [How to validate your React i18next application](https://lingual.dev/blog/how-to-validate-your-react-i18next-application/): Present a workflow based on react-i18next to prevent missing, unused, and invalid translation keys. There’s another post for react-intl users.
+- 📜 [Rails \+ Stimulus \+ React \- The definitive way to integrate](https://blog.codeminer42.com/rails-stimulus-react/): Using Stimulus data attributes to mount a React autocomplete component on a Rails page.
+- 📜 [Build-time Open Graph Images in Remix](https://kettanaito.com/blog/build-time-og-images-in-remix): Explains limits of Satori, and introduces a new remix-og-image Vite plugin that spawns a Chromium instance.
+- 📜 [5 tips to effectively optimize INP in React](https://calendar.perfplanet.com/2024/5-tips-to-effectively-optimize-inp-in-react/): Reduce DOM size, split components, use Suspense, avoid hydration errors, pay attention to useEffect that can be synchronous.
+- 📜 [You might not need a React Form Library](https://www.robinwieruch.de/react-form-validation/): Shows how to validate forms server-side and client-side without a library.
+- 📜 [React Tech Stack for 2025](https://www.robinwieruch.de/react-tech-stack/)
+- 📜 [Sharing Types and Code Between the Server and Client](https://echobind.com/post/sharing-types-and-code-between-the-server-and-client)
+- 📜 [Storybook tags \- Organize your components and stories to match the way you work](https://storybook.js.org/blog/storybook-tags/)
+- 📜 [The Mental Model of Server Components](https://saewitz.com/the-mental-model-of-server-components)
+- 📜 [How to Dockerize a React App](https://www.docker.com/blog/how-to-dockerize-react-app/)
+- 📦 [Inertia 2.0 \- Redefining Frontend Development for Laravel](https://blog.laravel.com/announcing-inertia-20-redefining-frontend-development-for-laravel): New major version of this tool that seamlessly integrates React into PHP backends. New features: async requests, deferred props, prefetching, polling.
+- 📦 [Apollo Client 3.12 \- GraphQL fragment data masking](https://www.apollographql.com/blog/more-resilient-code-with-data-masking-in-apollo-client-3-12): Similar to Relay, Apollo Client improves in colocation, encapsulation, and performance. A component will only receive the fields it needs, and nothing more.
+- 📦 [Virtua 0.39 \- Zero-config, fast and small virtual list \- React 19 support](https://github.com/inokawa/virtua)
+- 📦 [MUI 6.2](https://github.com/mui/material-ui/releases/tag/v6.2.0) \+ [https://mui.com/blog/material-ui-2024-updates/](https://mui.com/blog/material-ui-2024-updates/)
+- 📦 [Roadmap UI \- Composable components for building interactive roadmaps \- Gantt, Kanban, Calendar, List, Table](https://www.roadmap-ui.com/)
+- 🎥 [Justin Poli \- What happens when you break the rules of React?](https://www.youtube.com/watch?v=NsFD-1HkJNU): Mobx-State-Tree maintainer explains plan to make the reactive library compatible with the React Compiler.
+- 🎥 [Wawa Sensei \- My Journey Coding a VR/AR Rhythm Game with Three.js & React Three Fiber](https://www.youtube.com/watch?v=jBh4ftHqC5U)
+- 🎥 [Theo \- Astro stole my favorite parts of Next (and I'm hyped)](https://www.youtube.com/watch?v=3xqa0SsRbdM)
+- 🎥 [Shruti Kapoor \- React 19: The Features You Actually Want](https://www.youtube.com/watch?v=Hek-Ux9jha8)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -52,24 +89,21 @@ It covers topics like how to choose the right technologies, non-obvious behavior
 
 **🔧 By Developers, for Developers:**
 
-*   Fully customizable UI components and hooks.
-    
-*   Comprehensive documentation and quickstart templates for rapid integration.
-    
+- Fully customizable UI components and hooks.
+
+- Comprehensive documentation and quickstart templates for rapid integration.
 
 **⚡ Blazing-Fast Performance:**
 
-*   Sub-50ms message delivery.
-    
-*   Scalable for millions of users with a reliable infrastructure.
-    
+- Sub-50ms message delivery.
+
+- Scalable for millions of users with a reliable infrastructure.
 
 **✨ Out-of-the-Box Features:**
 
-*   Typing indicators, reactions, and threads.
-    
-*   Rich media support, including file and image sharing.
-    
+- Typing indicators, reactions, and threads.
+
+- Rich media support, including file and image sharing.
 
 🚀 Build Fast. Scale Effortlessly. [Get Started With Stream](https://getstream.io/try-for-free/?utm_source=newsletter&utm_medium=referral&utm_content=&utm_campaign=thisweekinreact).
 
@@ -77,13 +111,38 @@ It covers topics like how to choose the right technologies, non-obvious behavior
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 💸 [Demos \- 90+ React Native animations crafted with Reanimated, Gesture Handler, and Skia, by Reactiive](https://reactiive.io/demos?utm_source=thisweekinreact)
+- 📊 [State of React Native 2024 \- Survey open, answer it\!](https://survey.stateofreactnative.com/)
+- 🐦 [Evan Bacon’s `npx create-target demo`](https://x.com/Baconbrix/status/1868672438898455023): New CLI to create iOS targets (widgets, share extensions) that live alongside your Expo app and can communicate with it through shared storage.
+- 🧵 [Infinite Red \- Top 2024 React Native posts](https://x.com/infinite_red/status/1869104889777020951)
+- 📣 [Android XR SDK Developer Preview](https://developers.googleblog.com/en/introducing-android-xr-sdk-developer-preview/): Google announced a new Android platform for extended reality headsets. As you can expect from Oskar, React Native support is coming ([demo](https://x.com/o_kwasniewski/status/1868645896239690009))
+- 📣 [Expo \- Upcoming Apple push notification service certificate change](https://expo.dev/blog/upcoming-apple-push-notification-service-certificate-change): Expo Push Service users do not have to do anything.
+- 📜 [Add React Native to the Signal open source app](https://blog.swmansion.com/add-react-native-to-the-signal-open-source-app-part-2-android-803c1b726582): 2-part series (iOS \+ Android) shows how to integrate brownfield RN into an existing app.
+- 📜 [How to Upgrade React Native in a Brownfield Application](https://www.callstack.com/blog/how-to-upgrade-react-native-in-a-brownfield-application)
+- 📜 [How we promote social sharing on Marathon with Expo](https://expo.dev/blog/how-we-promote-social-sharing-on-marathon-with-expo)
+- 📜 [Building Seamless Navigation in Expo Router: Tabs, Modals, and Stacks](https://medium.com/@coby09/building-seamless-navigation-in-expo-router-tabs-modals-and-stacks-2df1a5522321)
+- 📦 [React Native Image Playground](https://github.com/Ucekay/react-native-image-playground): To integrate the brand new iOS 18.2+ Apple Intelligence Image Playground into your app, and generate AI images.
+- 📦 [Nitro 0.19 \- Swift errors, bi-directional Promises, type-erasure](https://github.com/mrousavy/nitro/releases/tag/v0.19.0)
+- 📦 [Nitro Palette 1.0 \- Fast color palette extraction from images](https://github.com/Ucekay/nitro-palette/releases/tag/v1.0.0)
+- 📦 [React Native Volume Manager 2.0 \- New Architecture, 0.76+, iOS 15+, Expo 52+](https://github.com/hirbod/react-native-volume-manager/releases/tag/v2.0.1)
+- 📦 [Drag Select 0.1 \- Utility for creating a pan gesture that auto-selects items in a list](https://github.com/osamaqarem/drag-select)
+- 📦 [React Native Testing Library 13.0 RC \- Enables concurrent rendering by default, automatically extends Jest matchers](https://github.com/callstack/react-native-testing-library/releases/tag/v13.0.0-rc.0)
+- 🎥 [Dan’s Lab \- Basic 3D Graphics with Linear Algebra and React-Native Skia](https://www.youtube.com/watch?v=uZBGcbKFhXE)
+- 🎥 [Expo \- Universal Full-Stack Expo Stripe Payment Integration](https://www.youtube.com/watch?v=J0tyxUV_omY)
+- 🎙️ [Rocket Ship 56 \- Bluesky's React Native App & AT Protocol with Samuel Newman](https://share.transistor.fm/s/2134db4c)
+- 🎙️ [React Universe On Air \- React Native FastIO: Nitro-Powered Performance Boost](https://www.youtube.com/watch?v=u4PBBLujv7I)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📣 [Ecma 426 \- Source map format specification](https://ecma-international.org/publications-and-standards/standards/ecma-426/): Believe it or not, it was not standardized yet.
+- 📊 [State of JavaScript 2024](https://2024.stateofjs.com/en-US)
+- 📊 [State of Node.js Performance 2024](https://nodesource.com/blog/State-of-Nodejs-Performance-2024)
+- 📦 [Zod 3.24 \- First version to implement the standard-schema specification](https://github.com/colinhacks/zod/releases/tag/v3.24.0)
+- 📦 [Node 23.4 \- unflag `node:sqlite` module,`--trace-env`, `assert.partialDeepStrictEqual`](https://nodejs.org/en/blog/release/v23.4.0)
+- 📜 [Bun's new text-based lockfile](https://bun.sh/blog/bun-lock-text-lockfile)
+- 📜 [Isomorphic Web Components](https://jakelazaroff.com/words/isomorphic-web-components/)
 
 ---
 
