--- a/website/newsletter/214/index.mdx
+++ b/website/newsletter/214/index.mdx
@@ -148,8 +148,8 @@ I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gat
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/214/meme.jpg)](https://x.com/jordwalke/status/1868092255879540957)
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/214/meme2.jpg)](https://x.com/wesbos/status/1869032343526322378)
 
 See ya! 👋
