--- a/website/newsletter/214/index.mdx
+++ b/website/newsletter/214/index.mdx
@@ -38,9 +38,11 @@ It covers topics like how to choose the right technologies, non-obvious behavior
 
 ## ⚛️ React {#react}
 
+[![Base UI 1.0 alpha](/emails/issues/214/base-ui.jpg)](https://base-ui.com/)
+
 [**Base UI 1.0 alpha**](https://base-ui.com/)
 
-I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gather to create a new set of 25 unstyled, accessible, composable primitive components with great care to details, I think it’s worth paying attention\! Radix is super popular these days (notably thanks to shadcn/ui), but has been [less actively maintained](https://github.com/radix-ui/primitives/graphs/contributors) recently, and a new headless lib challenger is welcome\!
+I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gather to create a new set of 25 unstyled, accessible, composable primitive components with great care to details, I think it’s worth paying attention\! Radix is super popular these days (notably thanks to shadcn/ui), but has been [less actively maintained](https://github.com/radix-ui/primitives/graphs/contributors) recently, and a new headless lib challenger is always welcome\!
 
 ---
 
@@ -49,6 +51,7 @@ I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gat
 - 📜 [React 19 and Web Component Examples](https://frontendmasters.com/blog/react-19-and-web-component-examples/): Chris Coyier testing React 19 custom elements support by creating a Lit element and rendering it though JSX. You can seamlessly pass an object as props, but for event handlers you may need to dispatch a custom event.
 - 📜 [React 19 introduces full support for custom elements](https://aleks-elkin.github.io/posts/2024-12-06-react-19/): Comparing support improvement between React 18 and React 19\.
 - 📜 [Sweet Suspense](https://plainvanillaweb.com/blog/articles/2024-09-09-sweet-suspense/): Fun experiment recreating React lazy/Suspense/ErrorBoundary with custom elements.
+- 📜 [Isomorphic Web Components](https://jakelazaroff.com/words/isomorphic-web-components/): Not directly related to React, but a useful overview of server-side rendering support for Web components.
 
 ---
 
@@ -90,19 +93,16 @@ I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gat
 **🔧 By Developers, for Developers:**
 
 - Fully customizable UI components and hooks.
-
 - Comprehensive documentation and quickstart templates for rapid integration.
 
 **⚡ Blazing-Fast Performance:**
 
 - Sub-50ms message delivery.
-
 - Scalable for millions of users with a reliable infrastructure.
 
 **✨ Out-of-the-Box Features:**
 
 - Typing indicators, reactions, and threads.
-
 - Rich media support, including file and image sharing.
 
 🚀 Build Fast. Scale Effortlessly. [Get Started With Stream](https://getstream.io/try-for-free/?utm_source=newsletter&utm_medium=referral&utm_content=&utm_campaign=thisweekinreact).
@@ -142,7 +142,6 @@ I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gat
 - 📦 [Zod 3.24 \- First version to implement the standard-schema specification](https://github.com/colinhacks/zod/releases/tag/v3.24.0)
 - 📦 [Node 23.4 \- unflag `node:sqlite` module,`--trace-env`, `assert.partialDeepStrictEqual`](https://nodejs.org/en/blog/release/v23.4.0)
 - 📜 [Bun's new text-based lockfile](https://bun.sh/blog/bun-lock-text-lockfile)
-- 📜 [Isomorphic Web Components](https://jakelazaroff.com/words/isomorphic-web-components/)
 
 ---
 
