--- a/website/newsletter/214/index.mdx
+++ b/website/newsletter/214/index.mdx
@@ -15,10 +15,6 @@ On the mobile side, Google introduced Android XR and React Native support is alr
 🎄 We are taking a Christmas break, this is the last newsletter until 8th January.\
 🧑‍🎄 You've already given me a great gift, we are now 4th most popular JS newsletter according to the recently published [State of JS 2024 survey result](https://2024.stateofjs.com/en-US/resources/).
 
-State of JS 4th!
-
-Chrismas break
-
 <!-- truncate -->
 
 import Support from "../_support.mdx";
@@ -67,6 +63,7 @@ I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gat
 - 👀 [Next.js PR \- `unstable_rootParams()`](https://github.com/vercel/next.js/pull/72837): A new convenient experimental API to return path params from all path segments up to the root layout. Looks particularly useful for accessing a i18n `[locale]` param.
 - 👀 [Next.js PR \- `experimental.newDevOverlay`](https://github.com/vercel/next.js/pull/73977): A new dev overlay is coming and the feature flag already exists.
 - 👀 [Rsbuild PR \- plugin-react-router](https://github.com/web-infra-dev/rsbuild/pull/4186): React Router framework features (Remix) are now implemented as a Vite plugin, but it seems other bundlers could also turn React Router into a framework 😲
+- 🎄 [GitHub Unwrapped 2024](https://githubunwrapped.com/): The Remotion-based project has just been update for 2024.
 - 📜 [How to validate your React i18next application](https://lingual.dev/blog/how-to-validate-your-react-i18next-application/): Present a workflow based on react-i18next to prevent missing, unused, and invalid translation keys. There’s another post for react-intl users.
 - 📜 [Rails \+ Stimulus \+ React \- The definitive way to integrate](https://blog.codeminer42.com/rails-stimulus-react/): Using Stimulus data attributes to mount a React autocomplete component on a Rails page.
 - 📜 [Build-time Open Graph Images in Remix](https://kettanaito.com/blog/build-time-og-images-in-remix): Explains limits of Satori, and introduces a new remix-og-image Vite plugin that spawns a Chromium instance.
