--- a/website/newsletter/214/index.mdx
+++ b/website/newsletter/214/index.mdx
@@ -3,7 +3,6 @@ slug: /214
 title: "This Week In React #214: Base UI, Custom Elements, Next.js, React Router, i18n, OG, Apollo, Android XR, iOS targets, Nitro, RNTL, Volume Manager, Drag Select, brownfield, Zod, Node, SourceMaps, Bun, State Of JS..."
 authors: [slorber]
 date: 12-18-2024
-unlisted: true
 ---
 
 Hi everyone!
@@ -54,7 +53,7 @@ I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gat
 - 📜 [React 19 and Web Component Examples](https://frontendmasters.com/blog/react-19-and-web-component-examples/): Chris Coyier testing React 19 custom elements support by creating a Lit element and rendering it though JSX. You can seamlessly pass an object as props, but for event handlers you may need to dispatch a custom event.
 - 📜 [React 19 introduces full support for custom elements](https://aleks-elkin.github.io/posts/2024-12-06-react-19/): Comparing support improvement between React 18 and React 19\.
 - 📜 [Sweet Suspense](https://plainvanillaweb.com/blog/articles/2024-09-09-sweet-suspense/): Fun experiment recreating React lazy/Suspense/ErrorBoundary with custom elements.
-- 📜 [Isomorphic Web Components](https://jakelazaroff.com/words/isomorphic-web-components/): Not directly related to React, but a useful overview of server-side rendering support for Web components.
+- 📜 [Isomorphic Web Components](https://jakelazaroff.com/words/isomorphic-web-components/): Not using React, but a useful overview of server-side rendering support for Web components.
 
 ---
 
@@ -69,6 +68,7 @@ I’m usually not into UI libs. But when Radix, MUI and Floating UI creators gat
 - 📜 [Build-time Open Graph Images in Remix](https://kettanaito.com/blog/build-time-og-images-in-remix): Explains limits of Satori, and introduces a new remix-og-image Vite plugin that spawns a Chromium instance.
 - 📜 [5 tips to effectively optimize INP in React](https://calendar.perfplanet.com/2024/5-tips-to-effectively-optimize-inp-in-react/): Reduce DOM size, split components, use Suspense, avoid hydration errors, pay attention to useEffect that can be synchronous.
 - 📜 [You might not need a React Form Library](https://www.robinwieruch.de/react-form-validation/): Shows how to validate forms server-side and client-side without a library.
+- 📜 [Introducing TanStack Start](https://frontendmasters.com/blog/introducing-tanstack-start/)
 - 📜 [React Tech Stack for 2025](https://www.robinwieruch.de/react-tech-stack/)
 - 📜 [Sharing Types and Code Between the Server and Client](https://echobind.com/post/sharing-types-and-code-between-the-server-and-client)
 - 📜 [Storybook tags \- Organize your components and stories to match the way you work](https://storybook.js.org/blog/storybook-tags/)
