--- a/website/newsletter/214/index.mdx
+++ b/website/newsletter/214/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /214
-title: "This Week In React #214: Base UI, Custom Elements, Next.js, React Router, i18n, OG, Apollo, Android XR, iOS targets, Nitro, RNTL, Volume Manager, Drag Select, brownfield, Zod, Node, SourceMaps, Bun, State Of JS..."
+title: "This Week In React #214: Base UI, Custom Elements, Next.js, React Router, TanStack, i18n, OG, Apollo, Android XR, iOS targets, Nitro, RNTL, Volume Manager, Drag Select, brownfield, Zod, Node, SourceMaps, Bun, State Of JS..."
 authors: [slorber]
 date: 12-18-2024
 ---
