--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /215
-title: "This Week In React #ISSUENUMBER: ..."
+title: "This Week In React #215: ..."
 authors: [slorber]
 date: 01-02-2025
 unlisted: true
@@ -26,7 +26,30 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Building a dropdown](https://reshaped.so/blog/building-a-dropdown)
+
+A great interactive article that shows how complex it can be to implement a flexible dropdown React component abstraction from scratch, covering triggers, positioning, focus traps, keyboard navigation, accessibility, and many other subtleties to consider.
+
+---
+
+- 👀 [React PR \- “Forgive” IDE extension](https://github.com/facebook/react/pull/31918): The React Compiler team recently [hinted at React Summit](https://www.youtube.com/watch?v=C8Mg-NSyqWg&t=14452s) their intent to create a “React IDE” powered by the compiler, not limited to just linting but also providing educational tooltips and more. Well, there's nothing very interesting to see yet, but work has begun on scaffolding a Language Server Protocol and VSCode extension, driven by a new [reactrc config file](https://github.com/facebook/react/pull/31916).
+- 📜 [Scaffolding your internatlization in React with automation](https://lingual.dev/blog/automating-your-react-internationalization/): Using ts-morph AST transformations to automatically replace all your app’s hardcoded strings by react-i18next or react-intl translation APIs.
+- 📜 [Building the Black Friday-Cyber Monday live dashboard](https://vercel.com/blog/building-the-black-friday-cyber-monday-live-dashboard): Vercel presents the technical architecture behind their Next.js-based Black Friday dashboard
+- 📜 [Replacing Legacy throw in React 19 with Suspense and use](https://peterkellner.net/2024/12/31/replacing-legacy-throw-in-react-19-with-suspense-and-use/): There’s a new `use()` hook, but throwing promises still works.
+- 📜 [Remix Security Checklist](https://blog.arcjet.com/remix-security-checklist/)
+- 📜 [Building a simple form in React \- before and after React 19](https://reactpractice.dev/articles/building-a-simple-form-in-react-before-and-after-react-19/)
+- 📦 [Astro 5.1 \- Experimental sessions, remote image caching, getActionPath](https://astro.build/blog/astro-510/)
+- 📦 [Fancy Components \- Collection of funky, unconventional components](https://www.fancycomponents.dev/)
+- 📦 [next-intl 4.0 beta](https://next-intl.dev/blog/next-intl-4-0): type-safety for ICU params is really cool\! Also lays the ground for the latest Next.js innovations like PPR, dynamicIO, and rootParams.
+- 📦 [React Router 7.1 \- Support for Vite 6](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v710)
+- 📦 [shadcn/ui CLI \- Experimental monorepo support](https://ui.shadcn.com/docs/monorepo)
+- 📦 [React Toastify 11.0 \- Easy customization](https://github.com/fkhadra/react-toastify/releases/tag/v11.0.0)
+- 📦 [TanStack Store 0.7 \- Derived/Effect classes](https://tanstack.com/store/latest/docs/quick-start#derived)
+- 🎥 [Theo \- This magic hack makes Next.js possible](https://www.youtube.com/watch?v=VMDydLUCLtE): A great video explaining how Next.js implements PPR and Dynamic IO features using only JS features.
+- 🎥 [Theo \- I might have a new favorite state manager (XState Store)](https://www.youtube.com/watch?v=Pmieyp75SrA)
+- 🎥 [Lee Robinson \- Forms with React 19 and Next.js](https://www.youtube.com/watch?v=KhO4VjaYSXU)
+- 🎥 [Ankita \- Stop\! These Next.js Mistakes are Killing Your App](https://www.youtube.com/watch?v=6ZR5drEQzp4)
+- 🎙️ [This Month in React \- React 19 is here, 2024 is over](https://creators.spotify.com/pod/show/reactiflux/episodes/TMiR-2024-12-React-19-is-here--2024-is-over-e2sv4o6)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -40,20 +63,56 @@ import Support from "../_support.mdx";
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[Expo \- 2024 year in review](https://expo.dev/blog/2024-year-in-review)
+
+To get 2025 off to a good start, let's recap all the great things Expo offered us last year:
+
+- Expo SDKs v50, v51, v52
+- Support for New Arch by default
+- Expo Router v3, v4
+- DOM components
+- Fingerprinting
+- Atlas & DevTools
+- expo.new
+- Workflows
+- Environment variables, security activity, and audit logs
+
+- 👀 [RN Skia PR \- macOS support](https://github.com/Shopify/react-native-skia/pull/2836)
+- 📊 [State of React Native](https://stateofreactnative.com/): Last week to answer the annual community survey\!
+- 📜 [Static Hermes Update, Dec 2024](https://x.com/tmikov/status/1869945330638442651): Static Hermes is expected to roll out in 2025, initially opt-in, then enabled by default. It can compile and execute both typed and untyped code. Benchmarks show it’s already significantly faster on untyped code, particularly with JIT mode and when Hermes can infer some types. No benchmark was provided for typed code, but I guess it should be much faster\!
+- 📜 [How to create beautiful glowing components on React Native 0.76+](https://www.devas.life/how-to-create-beautiful-glowing-components-on-react-native-0-76/): box-shadow support and New Architecture unlock new creative possibilities.
+- 📜 [From Native to Multiplatform Development: Unpacking Kotlin and Compose](https://www.callstack.com/blog/from-native-to-multiplatform-development-unpacking-kotlin-and-compose): Explains the Android Kotlin ecosystem from the perspective of a React Native dev.
+- 📜 [Why Expo is a great fit for new and existing React Native apps](https://expo.dev/blog/why-expo-is-a-great-fit-for-new-and-existing-react-native-apps)
+- 📜 [Skeleton Animation in React Native with Moti](https://reactiive.io/articles/skeleton-loader)
+- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [ExecuTorch 0.2 \- Support for Computer Vision models](https://github.com/software-mansion/react-native-executorch/releases/tag/v0.2.0)
+- 📦 [RN Volume Manager 2.0 \- New Architecture support](https://github.com/hirbod/react-native-volume-manager/releases/tag/v2.0.1)
+- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [Skia 1.8 \- New reconciler on React Native Web](https://github.com/Shopify/react-native-skia/releases/tag/v1.8.0)
+- 📦 [RN 0.77 RC.5](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5)
+- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [Windows 0.77 preview.1](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.77.0-preview.1)
+- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [Screens 4.4 \- Important fixes](https://github.com/software-mansion/react-native-screens/releases/tag/4.4.0)
+- 🎥 [Dan’s Lab \- Trigonometry and React-Native Skia \- My Take](https://www.youtube.com/watch?v=r5P7Z3O8Jog)
+- 🎙️ [React Universe On Air \- Evan Bacon on Universal React Native Apps, DOM & React Server Component](https://www.youtube.com/watch?v=rA7E3rGKSZw)
+- 🎙️ [RNR \- React Native Rewind 2024](https://www.reactnativeradio.com/episodes/rnr-317-react-native-rewind-2024)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📜 [Node.js Now Supports TypeScript By Default](https://www.totaltypescript.com/typescript-is-coming-to-node-23): The upcoming Node.js release v23.6 (and later v22.x) will be able to run `.ts` files by default\! 🔥
+- 📜 [Breaking Up with Long Tasks](https://calendar.perfplanet.com/2024/breaking-up-with-long-tasks-or-how-i-learned-to-group-loops-and-wield-the-yield/)
+- 📦 [Shortest \- AI-powered natural language end-to-end testing framework](https://github.com/anti-work/shortest)
+- 📦 [Rolldown 1.0 beta](https://github.com/rolldown/rolldown/releases/tag/v1.0.0-beta.1): An official release of Vite running on Rolldown is expected in early 2025\.
+- 📦 [Skip \- The reactive framework](https://skiplabs.io/): It’s like “React for the backend” according to Christopher Chedeau. 👀
+- 📦 [Rspack 1.2 alpha \- Experimental persistent caching, perf improvements](https://github.com/web-infra-dev/rspack/releases/tag/v1.2.0-alpha.0)
+- 📦 [PNPM 10.0 RC \- Increased security, whitelist packages allowed to run install scripts](https://github.com/pnpm/pnpm/releases/tag/v10.0.0-rc.2)
+- 📦 [Languine \- Translate your application with a CLI powered by AI](https://languine.ai/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/215/meme.jpg)](https://x.com/sebastienlorber/status/1874767983354253464)
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/215/meme2.jpg)](https://x.com/flydotio/status/1873840239166226548)
 
 See ya! 👋
