--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -26,14 +26,24 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-[Building a dropdown](https://reshaped.so/blog/building-a-dropdown)
+[![Building a dropdown](/emails/issues/215/dropdown.jpg)](https://reshaped.so/blog/building-a-dropdown)
+
+**[Building a dropdown](https://reshaped.so/blog/building-a-dropdown)**
 
 A great interactive article that shows how complex it can be to implement a flexible dropdown React component abstraction from scratch, covering triggers, positioning, focus traps, keyboard navigation, accessibility, and many other subtleties to consider.
 
 ---
 
+[![Scaffolding your internatlization in React with automation](/emails/issues/215/i18n.jpg)](https://lingual.dev/blog/automating-your-react-internationalization/)
+
+**[Scaffolding your internatlization in React with automation](https://lingual.dev/blog/automating-your-react-internationalization/)**
+
+This article shows how you can use ts-morph AST transformations to automatically replace all your app’s hardcoded strings by react-i18next or react-intl translation APIs.
+
+---
+
 - 👀 [React PR \- “Forgive” IDE extension](https://github.com/facebook/react/pull/31918): The React Compiler team recently [hinted at React Summit](https://www.youtube.com/watch?v=C8Mg-NSyqWg&t=14452s) their intent to create a “React IDE” powered by the compiler, not limited to just linting but also providing educational tooltips and more. Well, there's nothing very interesting to see yet, but work has begun on scaffolding a Language Server Protocol and VSCode extension, driven by a new [reactrc config file](https://github.com/facebook/react/pull/31916).
-- 📜 [Scaffolding your internatlization in React with automation](https://lingual.dev/blog/automating-your-react-internationalization/): Using ts-morph AST transformations to automatically replace all your app’s hardcoded strings by react-i18next or react-intl translation APIs.
+
 - 📜 [Building the Black Friday-Cyber Monday live dashboard](https://vercel.com/blog/building-the-black-friday-cyber-monday-live-dashboard): Vercel presents the technical architecture behind their Next.js-based Black Friday dashboard
 - 📜 [Replacing Legacy throw in React 19 with Suspense and use](https://peterkellner.net/2024/12/31/replacing-legacy-throw-in-react-19-with-suspense-and-use/): There’s a new `use()` hook, but throwing promises still works.
 - 📜 [Remix Security Checklist](https://blog.arcjet.com/remix-security-checklist/)
