--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -43,7 +43,6 @@ This article shows how you can use ts-morph AST transformations to automatically
 ---
 
 - 👀 [React PR \- “Forgive” IDE extension](https://github.com/facebook/react/pull/31918): The React Compiler team recently [hinted at React Summit](https://www.youtube.com/watch?v=C8Mg-NSyqWg&t=14452s) their intent to create a “React IDE” powered by the compiler, not limited to just linting but also providing educational tooltips and more. Well, there's nothing very interesting to see yet, but work has begun on scaffolding a Language Server Protocol and VSCode extension, driven by a new [reactrc config file](https://github.com/facebook/react/pull/31916).
-
 - 📜 [Building the Black Friday-Cyber Monday live dashboard](https://vercel.com/blog/building-the-black-friday-cyber-monday-live-dashboard): Vercel presents the technical architecture behind their Next.js-based Black Friday dashboard
 - 📜 [Replacing Legacy throw in React 19 with Suspense and use](https://peterkellner.net/2024/12/31/replacing-legacy-throw-in-react-19-with-suspense-and-use/): There’s a new `use()` hook, but throwing promises still works.
 - 📜 [Remix Security Checklist](https://blog.arcjet.com/remix-security-checklist/)
@@ -73,7 +72,9 @@ This article shows how you can use ts-morph AST transformations to automatically
 
 ## 📱 React-Native {#react-native}
 
-[Expo \- 2024 year in review](https://expo.dev/blog/2024-year-in-review)
+[![Expo - 2024 year in review](/emails/issues/215/expo.jpg)](https://expo.dev/blog/2024-year-in-review)
+
+**[Expo \- 2024 year in review](https://expo.dev/blog/2024-year-in-review)**
 
 To get 2025 off to a good start, let's recap all the great things Expo offered us last year:
 
@@ -87,6 +88,8 @@ To get 2025 off to a good start, let's recap all the great things Expo offered u
 - Workflows
 - Environment variables, security activity, and audit logs
 
+---
+
 - 👀 [RN Skia PR \- macOS support](https://github.com/Shopify/react-native-skia/pull/2836)
 - 📊 [State of React Native](https://stateofreactnative.com/): Last week to answer the annual community survey\!
 - 📜 [Static Hermes Update, Dec 2024](https://x.com/tmikov/status/1869945330638442651): Static Hermes is expected to roll out in 2025, initially opt-in, then enabled by default. It can compile and execute both typed and untyped code. Benchmarks show it’s already significantly faster on untyped code, particularly with JIT mode and when Hermes can infer some types. No benchmark was provided for typed code, but I guess it should be much faster\!
@@ -94,12 +97,12 @@ To get 2025 off to a good start, let's recap all the great things Expo offered u
 - 📜 [From Native to Multiplatform Development: Unpacking Kotlin and Compose](https://www.callstack.com/blog/from-native-to-multiplatform-development-unpacking-kotlin-and-compose): Explains the Android Kotlin ecosystem from the perspective of a React Native dev.
 - 📜 [Why Expo is a great fit for new and existing React Native apps](https://expo.dev/blog/why-expo-is-a-great-fit-for-new-and-existing-react-native-apps)
 - 📜 [Skeleton Animation in React Native with Moti](https://reactiive.io/articles/skeleton-loader)
-- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [ExecuTorch 0.2 \- Support for Computer Vision models](https://github.com/software-mansion/react-native-executorch/releases/tag/v0.2.0)
+- 📦 [RN ExecuTorch 0.2 \- Support for Computer Vision models](https://github.com/software-mansion/react-native-executorch/releases/tag/v0.2.0)
 - 📦 [RN Volume Manager 2.0 \- New Architecture support](https://github.com/hirbod/react-native-volume-manager/releases/tag/v2.0.1)
-- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [Skia 1.8 \- New reconciler on React Native Web](https://github.com/Shopify/react-native-skia/releases/tag/v1.8.0)
+- 📦 [RN Skia 1.8 \- New reconciler on React Native Web](https://github.com/Shopify/react-native-skia/releases/tag/v1.8.0)
 - 📦 [RN 0.77 RC.5](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5)
-- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [Windows 0.77 preview.1](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.77.0-preview.1)
-- 📦 [RN](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.5) [Screens 4.4 \- Important fixes](https://github.com/software-mansion/react-native-screens/releases/tag/4.4.0)
+- 📦 [RN Windows 0.77 preview.1](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.77.0-preview.1)
+- 📦 [RN Screens 4.4 \- Important fixes](https://github.com/software-mansion/react-native-screens/releases/tag/4.4.0)
 - 🎥 [Dan’s Lab \- Trigonometry and React-Native Skia \- My Take](https://www.youtube.com/watch?v=r5P7Z3O8Jog)
 - 🎙️ [React Universe On Air \- Evan Bacon on Universal React Native Apps, DOM & React Server Component](https://www.youtube.com/watch?v=rA7E3rGKSZw)
 - 🎙️ [RNR \- React Native Rewind 2024](https://www.reactnativeradio.com/episodes/rnr-317-react-native-rewind-2024)
