--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /215
-title: "This Week In React #215: ..."
+title: "This Week In React #215: Dropdown, i18n, Next.js, Remix, Astro, shadcn, Forgive, Fancy Components, Expo, Static Hermes, Skia, ExecuTorch, Kotlin, Node, Shortest, Rolldown, Rspack, pnpm..."
 authors: [slorber]
 date: 01-02-2025
 unlisted: true
@@ -117,7 +117,7 @@ To get 2025 off to a good start, let's recap all the great things Expo offered u
 - 📦 [Rolldown 1.0 beta](https://github.com/rolldown/rolldown/releases/tag/v1.0.0-beta.1): An official release of Vite running on Rolldown is expected in early 2025\.
 - 📦 [Skip \- The reactive framework](https://skiplabs.io/): It’s like “React for the backend” according to Christopher Chedeau. 👀
 - 📦 [Rspack 1.2 alpha \- Experimental persistent caching, perf improvements](https://github.com/web-infra-dev/rspack/releases/tag/v1.2.0-alpha.0)
-- 📦 [PNPM 10.0 RC \- Increased security, whitelist packages allowed to run install scripts](https://github.com/pnpm/pnpm/releases/tag/v10.0.0-rc.2)
+- 📦 [pnpm 10.0 RC \- Increased security, whitelist packages allowed to run install scripts](https://github.com/pnpm/pnpm/releases/tag/v10.0.0-rc.2)
 - 📦 [Languine \- Translate your application with a CLI powered by AI](https://languine.ai/)
 
 ---
