--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -20,7 +20,17 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Become a better engineer one newsletter at a time.](/emails/issues/183/posthog.jpg)](https://dub.link/twir-dec18)
+
+**[Become a better engineer one newsletter at a time.](https://dub.link/twir-dec18)**
+
+[Product for Engineers](https://dub.link/twir-dec18) is PostHog’s newsletter dedicated to helping engineers improve their product skills.
+
+With over 30k subscribers, it is a trusted source that bridges the gap between product and engineering, helping you ship products users love.
+
+It covers topics like how to choose the right technologies, non-obvious behaviors that will kill your startup, and A/B testing mistakes they learned the hard way. It’s totally free and always will be.
+
+[**Subscribe for free.**](https://dub.link/twir-dec18)
 
 ---
 
@@ -42,6 +52,7 @@ This article shows how you can use ts-morph AST transformations to automatically
 
 ---
 
+- 💸 [React Native Zero to Hero - Learn everything you need to ship your first app](https://galaxies.dev/missions/zero-to-hero?utm_source=thisweekinreact)
 - 👀 [React PR \- “Forgive” IDE extension](https://github.com/facebook/react/pull/31918): The React Compiler team recently [hinted at React Summit](https://www.youtube.com/watch?v=C8Mg-NSyqWg&t=14452s) their intent to create a “React IDE” powered by the compiler, not limited to just linting but also providing educational tooltips and more. Well, there's nothing very interesting to see yet, but work has begun on scaffolding a Language Server Protocol and VSCode extension, driven by a new [reactrc config file](https://github.com/facebook/react/pull/31916).
 - 📜 [Building the Black Friday-Cyber Monday live dashboard](https://vercel.com/blog/building-the-black-friday-cyber-monday-live-dashboard): Vercel presents the technical architecture behind their Next.js-based Black Friday dashboard
 - 📜 [Replacing Legacy throw in React 19 with Suspense and use](https://peterkellner.net/2024/12/31/replacing-legacy-throw-in-react-19-with-suspense-and-use/): There’s a new `use()` hook, but throwing promises still works.
@@ -66,7 +77,15 @@ This article shows how you can use ts-morph AST transformations to automatically
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![React-admin: The Open-Source Framework for B2B apps](/emails/issues/187/reactadmin.jpg)](https://marmelab.com/react-admin/)
+
+**[React-admin: The Open-Source Framework for B2B apps](https://marmelab.com/react-admin/)**
+
+👩🏻‍💻 **For developers, by developers**: React-admin is a free, low-code library that accelerates the development of internal tools, admins or B2B apps. Unlike no-code tools, you use code, ensuring you’re never limited by the framework.
+
+🔌 **Flexible Integration**: React-admin supports any API format (REST or GraphQL) and various authentication backends, including Auth0, Cognito, Google Auth, Active Directory, and Keycloak. You control the server, so there are no extra costs for Single Sign-On (SSO) capabilities. It's fully themeable, allowing you to customize it with your company's colors.
+
+🚀 **Proven Success**: Over 25,000 companies have built single-page applications with React-admin. For your next project, save weeks of development time by using react-admin. [Try react-admin now](https://marmelab.com/react-admin/).
 
 ---
 
@@ -90,6 +109,7 @@ To get 2025 off to a good start, let's recap all the great things Expo offered u
 
 ---
 
+- 💸 [Demos \- 90+ React Native animations crafted with Reanimated, Gesture Handler, and Skia, by Reactiive](https://reactiive.io/demos?utm_source=thisweekinreact)
 - 👀 [RN Skia PR \- macOS support](https://github.com/Shopify/react-native-skia/pull/2836)
 - 📊 [State of React Native](https://stateofreactnative.com/): Last week to answer the annual community survey\!
 - 📜 [Static Hermes Update, Dec 2024](https://x.com/tmikov/status/1869945330638442651): Static Hermes is expected to roll out in 2025, initially opt-in, then enabled by default. It can compile and execute both typed and untyped code. Benchmarks show it’s already significantly faster on untyped code, particularly with JIT mode and when Hermes can infer some types. No benchmark was provided for typed code, but I guess it should be much faster\!
